# Class_Portfolio

./: CMakeLists.txt  README.md  WindowStates.cpp  WindowStates.h  main.cpp
BouncingBall/: BouncingBall.cpp  BouncingBall.h
DrawCard/: CardVisual.cpp  CardVisual.h
PokerAnalysis/: Card.cpp  Card.h  CardHand.cpp  CardHand.h  CardHandScorer.cpp  CardHandScorer.h  Deck.cpp  Deck.h  PokerScore.cpp  PokerScore.h  Scores.h  rankEnum.h  suitEnum.h
Pong/: Paddle.cpp  Paddle.h  bounce.cpp  bounce.h
Snake/: Food.cpp  Food.h  SingleCell.cpp  SingleCell.h  SnakeBody.cpp  SnakeBody.h
TopHatGuy/: TopHatGuy.cpp  TopHatGuy.h
